# gpt-summarizer-python

./: LICENSE.md  README.md  pyproject.toml  setup.cfg  setup.py
gptsummarizer/: __init__.py  gptmodels.py  summarizer.py
summarizer/: __init__.py  summarizer.py
