[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gptsummarizer"
version = "0.0.1"
authors = [
    {name = "Dev Halder", email = "dev.devojoyti@gmail.com"},
]
description = "A lightweight library to summarize long texts using GPT models"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
    ]
dependencies = [
    "openai",
    # "tiktoken", somehow this is throwing error, pip cannot find tiktoken
]

[project.urls]
"Homepage" = "https://github.com/devojoyti/gpt-summarizer-python"
"Bug Tracker" = "https://github.com/devojoyti/gpt-summarizer-python/issues"