[metadata]
name = gptsummarizer
version = 0.0.5
author = Dev Halder
author_email = dev.devojoyti@gmail.com
description = A lightweight library to summarize long texts using GPT model
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
url = https://gitlab.com/codasteroid/basicpkg
install_requires = 
    tiktoken
    openai
project_urls =
    Bug Tracker = https://github.com/devojoyti/gpt-summarizer-python/issues
    repository = https://github.com/devojoyti/gpt-summarizer-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.6